--- a/environment.yml
+++ b/environment.yml
@@ -61,10 +61,17 @@ dependencies:
       - aiosqlite==0.21.0
       - annotated-types==0.7.0
       - anyio==4.9.0
+      - argon2-cffi==25.1.0
+      - argon2-cffi-bindings==21.2.0
+      - arrow==1.3.0
+      - async-lru==2.0.5
       - attrs==25.3.0
+      - babel==2.17.0
       - banks==2.1.3
       - beautifulsoup4==4.13.4
+      - bleach==6.2.0
       - certifi==2025.7.9
+      - cffi==1.17.1
       - charset-normalizer==3.4.2
       - click==8.2.1
       - colorama==0.4.6
@@ -73,8 +80,10 @@ dependencies:
       - deprecated==1.2.18
       - dirtyjson==1.0.8
       - distro==1.9.0
+      - fastjsonschema==2.21.1
       - filelock==3.18.0
       - filetype==1.2.0
+      - fqdn==1.5.1
       - frozenlist==1.7.0
       - fsspec==2025.5.1
       - greenlet==3.2.3
@@ -85,9 +94,21 @@ dependencies:
       - httpx==0.28.1
       - huggingface-hub==0.33.4
       - idna==3.10
+      - isoduration==20.11.0
       - jinja2==3.1.6
       - jiter==0.10.0
       - joblib==1.5.1
+      - json5==0.12.0
+      - jsonpointer==3.0.0
+      - jsonschema==4.24.0
+      - jsonschema-specifications==2025.4.1
+      - jupyter-events==0.12.0
+      - jupyter-lsp==2.2.5
+      - jupyter-server==2.16.0
+      - jupyter-server-terminals==0.5.3
+      - jupyterlab==4.4.4
+      - jupyterlab-pygments==0.3.0
+      - jupyterlab-server==2.27.3
       - llama-cloud==0.1.32
       - llama-cloud-services==0.6.43
       - llama-index==0.12.48
@@ -109,39 +130,61 @@ dependencies:
       - llama-parse==0.6.43
       - markupsafe==3.0.2
       - marshmallow==3.26.1
+      - mistune==3.1.3
       - multidict==6.6.3
       - mypy-extensions==1.1.0
+      - nbclient==0.10.2
+      - nbconvert==7.16.6
+      - nbformat==5.10.4
       - networkx==3.5
       - nltk==3.9.1
+      - notebook-shim==0.2.4
       - numpy==2.3.1
       - openai==1.95.1
+      - overrides==7.7.0
       - pandas==2.2.3
+      - pandocfilters==1.5.1
       - pillow==11.3.0
+      - prometheus-client==0.22.1
       - propcache==0.3.2
+      - pycparser==2.22
       - pydantic==2.11.7
       - pydantic-core==2.33.2
       - pypdf==5.8.0
       - python-dotenv==1.1.1
+      - python-json-logger==3.3.0
       - pytz==2025.2
       - pyyaml==6.0.2
+      - referencing==0.36.2
       - regex==2024.11.6
       - requests==2.32.4
+      - rfc3339-validator==0.1.4
+      - rfc3986-validator==0.1.1
+      - rpds-py==0.26.0
       - safetensors==0.5.3
+      - send2trash==1.8.3
       - setuptools==80.9.0
       - sniffio==1.3.1
       - soupsieve==2.7
       - sqlalchemy==2.0.41
       - striprtf==0.0.26
       - tenacity==9.1.2
+      - terminado==0.18.1
       - tiktoken==0.9.0
+      - tinycss2==1.4.0
       - tokenizers==0.21.2
       - tqdm==4.67.1
       - transformers==4.53.2
+      - types-python-dateutil==2.9.0.20250708
       - typing-extensions==4.14.1
       - typing-inspect==0.9.0
       - typing-inspection==0.4.1
       - tzdata==2025.2
+      - uri-template==1.3.0
       - urllib3==2.5.0
+      - webcolors==24.11.1
+      - webencodings==0.5.1
+      - websocket-client==1.8.0
       - wrapt==1.17.2
       - yarl==1.20.1
 prefix: /opt/anaconda3/envs/conda-ai
