--- a/environment.yml
+++ b/environment.yml
@@ -1,114 +1,226 @@
-name: conda-ai
+name: base
 channels:
-  - defaults
-  - https://repo.anaconda.com/pkgs/main
-  - https://repo.anaconda.com/pkgs/r
+  - conda-forge
 dependencies:
-  - appnope=0.1.4=py313hca03da5_0
-  - asttokens=3.0.0=py313hca03da5_0
-  - bzip2=1.0.8=h80987f9_6
-  - ca-certificates=2025.2.25=hca03da5_0
-  - comm=0.2.1=py313hca03da5_0
-  - debugpy=1.8.11=py313h313beb8_0
-  - decorator=5.1.1=pyhd3eb1b0_0
-  - executing=0.8.3=pyhd3eb1b0_0
-  - expat=2.7.1=h313beb8_0
-  - ipykernel=6.29.5=py313hca03da5_1
-  - ipython=9.1.0=py313hca03da5_0
-  - ipython_pygments_lexers=1.1.1=py313hca03da5_0
-  - jedi=0.19.2=py313hca03da5_0
-  - jupyter_client=8.6.3=py313hca03da5_0
-  - jupyter_core=5.8.1=py313hca03da5_0
-  - libcxx=17.0.6=he5c5206_4
-  - libffi=3.4.4=hca03da5_1
-  - libmpdec=4.0.0=h80987f9_0
-  - libsodium=1.0.18=h1a28f6b_0
-  - matplotlib-inline=0.1.6=py313hca03da5_0
-  - ncurses=6.4=h313beb8_0
-  - nest-asyncio=1.6.0=py313hca03da5_0
-  - openssl=3.0.16=h02f6b3c_0
-  - packaging=24.2=py313hca03da5_0
-  - parso=0.8.4=py313hca03da5_0
-  - pexpect=4.9.0=py313hca03da5_0
-  - pip=25.1=pyhc872135_2
-  - platformdirs=4.3.7=py313hca03da5_0
-  - prompt-toolkit=3.0.43=py313hca03da5_0
-  - prompt_toolkit=3.0.43=hd3eb1b0_0
-  - psutil=5.9.0=py313h80987f9_1
-  - ptyprocess=0.7.0=pyhd3eb1b0_2
-  - pure_eval=0.2.2=pyhd3eb1b0_0
-  - pygments=2.19.1=py313hca03da5_0
-  - python=3.13.5=h2eb94d5_100_cp313
-  - python-dateutil=2.9.0post0=py313hca03da5_2
-  - python_abi=3.13=0_cp313
-  - pyzmq=26.2.0=py313h313beb8_0
-  - readline=8.2=h1a28f6b_0
-  - six=1.17.0=py313hca03da5_0
-  - sqlite=3.45.3=h80987f9_0
-  - stack_data=0.2.0=pyhd3eb1b0_0
-  - tk=8.6.14=h6ba3021_1
-  - tornado=6.5.1=py313h80987f9_0
-  - traitlets=5.14.3=py313hca03da5_0
-  - wcwidth=0.2.13=py313hca03da5_0
-  - wheel=0.45.1=py313hca03da5_0
-  - xz=5.6.4=h80987f9_1
-  - zeromq=4.3.5=h313beb8_0
-  - zlib=1.2.13=h18a0788_1
+  - _openmp_mutex=4.5=2_gnu
+  - alembic=1.16.4=pyhd8ed1ab_0
+  - annotated-types=0.7.0=pyhd8ed1ab_1
+  - anyio=4.9.0=pyh29332c3_0
+  - archspec=0.2.5=pyhd8ed1ab_0
+  - argon2-cffi=25.1.0=pyhd8ed1ab_0
+  - argon2-cffi-bindings=21.2.0=py312hb2c0f52_5
+  - arrow=1.3.0=pyhd8ed1ab_1
+  - asttokens=3.0.0=pyhd8ed1ab_1
+  - async-lru=2.0.5=pyh29332c3_0
+  - async_generator=1.10=pyhd8ed1ab_2
+  - attrs=25.3.0=pyh71513ae_0
+  - babel=2.17.0=pyhd8ed1ab_0
+  - beautifulsoup4=4.13.4=pyha770c72_0
+  - bleach=6.2.0=pyh29332c3_4
+  - bleach-with-css=6.2.0=h82add2a_4
+  - blinker=1.9.0=pyhff2d567_0
+  - boltons=25.0.0=pyhd8ed1ab_0
+  - brotli-python=1.1.0=py312h6f74592_3
+  - bzip2=1.0.8=h68df207_7
+  - c-ares=1.34.5=h86ecc28_0
+  - ca-certificates=2025.7.9=hbd8a1cb_0
+  - cached-property=1.5.2=hd8ed1ab_1
+  - cached_property=1.5.2=pyha770c72_1
+  - certifi=2025.7.9=pyhd8ed1ab_0
+  - certipy=0.2.2=pyhd8ed1ab_0
+  - cffi=1.17.1=py312hac81daf_0
+  - charset-normalizer=3.4.2=pyhd8ed1ab_0
+  - colorama=0.4.6=pyhd8ed1ab_1
+  - comm=0.2.2=pyhd8ed1ab_1
+  - conda=25.5.1=py312h996f985_0
+  - conda-libmamba-solver=25.4.0=pyhd8ed1ab_0
+  - conda-package-handling=2.4.0=pyh7900ff3_2
+  - conda-package-streaming=0.12.0=pyhd8ed1ab_0
+  - cpp-expected=1.1.0=h17cf362_1
+  - cryptography=45.0.5=py312he723553_0
+  - debugpy=1.8.14=py312h6f74592_0
+  - decorator=5.2.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - distro=1.9.0=pyhd8ed1ab_1
+  - exceptiongroup=1.3.0=pyhd8ed1ab_0
+  - executing=2.2.0=pyhd8ed1ab_0
+  - fmt=11.1.4=h97e1849_1
+  - fqdn=1.5.1=pyhd8ed1ab_1
+  - frozendict=2.4.6=py312hb2c0f52_0
+  - greenlet=3.2.3=py312h6f74592_0
+  - h11=0.16.0=pyhd8ed1ab_0
+  - h2=4.2.0=pyhd8ed1ab_0
+  - hpack=4.1.0=pyhd8ed1ab_0
+  - httpcore=1.0.9=pyh29332c3_0
+  - httpx=0.28.1=pyhd8ed1ab_0
+  - hyperframe=6.1.0=pyhd8ed1ab_0
+  - icu=75.1=hf9b3779_0
+  - idna=3.10=pyhd8ed1ab_1
+  - importlib-metadata=8.7.0=pyhe01879c_1
+  - importlib_resources=6.5.2=pyhd8ed1ab_0
+  - ipykernel=6.29.5=pyh3099207_0
+  - ipython=9.4.0=pyhfa0c392_0
+  - ipython_genutils=0.2.0=pyhd8ed1ab_2
+  - ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
+  - isoduration=20.11.0=pyhd8ed1ab_1
+  - jedi=0.19.2=pyhd8ed1ab_1
+  - jinja2=3.1.6=pyhd8ed1ab_0
+  - json5=0.12.0=pyhd8ed1ab_0
+  - jsonpatch=1.33=pyhd8ed1ab_1
+  - jsonpointer=3.0.0=py312h996f985_1
+  - jsonschema=4.24.0=pyhd8ed1ab_0
+  - jsonschema-specifications=2025.4.1=pyh29332c3_0
+  - jsonschema-with-format-nongpl=4.24.0=hd8ed1ab_0
+  - jupyter-lsp=2.2.5=pyhe01879c_2
+  - jupyter_client=8.6.3=pyhd8ed1ab_1
+  - jupyter_core=5.8.1=pyh31011fe_0
+  - jupyter_events=0.12.0=pyh29332c3_0
+  - jupyter_server=2.16.0=pyhe01879c_0
+  - jupyter_server_terminals=0.5.3=pyhd8ed1ab_1
+  - jupyterhub-base=5.3.0=pyhda7c55b_0
+  - jupyterhub-singleuser=5.3.0=h4422900_0
+  - jupyterlab=4.4.4=pyhd8ed1ab_0
+  - jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
+  - jupyterlab_server=2.27.3=pyhd8ed1ab_1
+  - keyutils=1.6.1=h4e544f5_0
+  - krb5=1.21.3=h50a48e9_0
+  - ld_impl_linux-aarch64=2.44=h5e2c951_1
+  - libarchive=3.8.1=gpl_h4ccfd8d_100
+  - libcurl=8.14.1=h6702fde_0
+  - libedit=3.1.20250104=pl5321h976ea20_0
+  - libev=4.33=h31becfc_2
+  - libexpat=2.7.0=h5ad3122_0
+  - libffi=3.4.6=he21f813_1
+  - libgcc=15.1.0=he277a41_3
+  - libgcc-ng=15.1.0=he9431aa_3
+  - libgomp=15.1.0=he277a41_3
+  - libiconv=1.18=hc99b53d_1
+  - liblzma=5.8.1=h86ecc28_2
+  - libmamba=2.3.0=hb4ed4c6_1
+  - libmambapy=2.3.0=py312h2cef7aa_1
+  - libnghttp2=1.64.0=hc8609a4_0
+  - libnsl=2.0.1=h86ecc28_1
+  - libsodium=1.0.20=h68df207_0
+  - libsolv=0.7.33=hdda61c4_1
+  - libsqlite=3.50.2=hdbb6186_2
+  - libssh2=1.11.1=h18c354c_0
+  - libstdcxx=15.1.0=h3f4de04_3
+  - libstdcxx-ng=15.1.0=hf1166c9_3
+  - libuuid=2.38.1=hb4cce97_0
+  - libxcrypt=4.4.36=h31becfc_1
+  - libxml2=2.13.8=he060846_0
+  - libzlib=1.3.1=h86ecc28_2
+  - lz4-c=1.10.0=h5ad3122_1
+  - lzo=2.10=h31becfc_1001
+  - mako=1.3.10=pyhd8ed1ab_0
+  - mamba=2.3.0=h62c53a9_1
+  - markupsafe=3.0.2=py312h74ce7d3_1
+  - matplotlib-inline=0.1.7=pyhd8ed1ab_1
+  - menuinst=2.3.0=py312h996f985_0
+  - mistune=3.1.3=pyh29332c3_0
+  - nbclassic=1.3.1=pyhe01879c_0
+  - nbclient=0.10.2=pyhd8ed1ab_0
+  - nbconvert-core=7.16.6=pyh29332c3_0
+  - nbformat=5.10.4=pyhd8ed1ab_1
+  - ncurses=6.5=ha32ae93_3
+  - nest-asyncio=1.6.0=pyhd8ed1ab_1
+  - nlohmann_json=3.11.3=h0a1ffab_1
+  - notebook=7.4.4=pyhd8ed1ab_0
+  - notebook-shim=0.2.4=pyhd8ed1ab_1
+  - oauthlib=3.3.1=pyhd8ed1ab_0
+  - openssl=3.5.1=hd08dc88_0
+  - overrides=7.7.0=pyhd8ed1ab_1
+  - packaging=25.0=pyh29332c3_1
+  - pamela=1.2.0=pyhd8ed1ab_1
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - parso=0.8.4=pyhd8ed1ab_1
+  - pexpect=4.9.0=pyhd8ed1ab_1
+  - pickleshare=0.7.5=pyhd8ed1ab_1004
+  - pip=25.1.1=pyh8b19718_0
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
+  - platformdirs=4.3.8=pyhe01879c_0
+  - pluggy=1.6.0=pyhd8ed1ab_0
+  - prometheus_client=0.22.1=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.51=pyha770c72_0
+  - psutil=7.0.0=py312hb2c0f52_0
+  - ptyprocess=0.7.0=pyhd8ed1ab_1
+  - pure_eval=0.2.3=pyhd8ed1ab_1
+  - pybind11-abi=4=hd8ed1ab_3
+  - pycosat=0.6.6=py312hb2c0f52_2
+  - pycparser=2.22=pyh29332c3_1
+  - pydantic=2.11.7=pyh3cfb1c2_0
+  - pydantic-core=2.33.2=py312h1c19210_0
+  - pygments=2.19.2=pyhd8ed1ab_0
+  - pyjwt=2.10.1=pyhd8ed1ab_0
+  - pysocks=1.7.1=pyha55dd90_7
+  - python=3.12.11=h1683364_0_cpython
+  - python-dateutil=2.9.0.post0=pyhe01879c_2
+  - python-fastjsonschema=2.21.1=pyhd8ed1ab_0
+  - python-json-logger=2.0.7=pyhd8ed1ab_0
+  - python_abi=3.12=7_cp312
+  - pytz=2025.2=pyhd8ed1ab_0
+  - pyyaml=6.0.2=py312hcc812fe_2
+  - pyzmq=27.0.0=py312h2427ae1_0
+  - readline=8.2=h8382b9d_2
+  - referencing=0.36.2=pyh29332c3_0
+  - reproc=14.2.5.post0=h86ecc28_0
+  - reproc-cpp=14.2.5.post0=h5ad3122_0
+  - requests=2.32.4=pyhd8ed1ab_0
+  - rfc3339-validator=0.1.4=pyhd8ed1ab_1
+  - rfc3986-validator=0.1.1=pyh9f0ad1d_0
+  - rpds-py=0.26.0=py312hf05e714_0
+  - ruamel.yaml=0.18.14=py312hb2c0f52_0
+  - ruamel.yaml.clib=0.2.8=py312hb2c0f52_1
+  - send2trash=1.8.3=pyh0d859eb_1
+  - setuptools=80.9.0=pyhff2d567_0
+  - simdjson=3.13.0=h17cf362_0
+  - six=1.17.0=pyhd8ed1ab_0
+  - sniffio=1.3.1=pyhd8ed1ab_1
+  - soupsieve=2.7=pyhd8ed1ab_0
+  - sqlalchemy=2.0.41=py312h52516f5_0
+  - stack_data=0.6.3=pyhd8ed1ab_1
+  - terminado=0.18.1=pyh0d859eb_0
+  - tinycss2=1.4.0=pyhd8ed1ab_0
+  - tk=8.6.13=noxft_h5688188_102
+  - tomli=2.2.1=pyhd8ed1ab_1
+  - tornado=6.5.1=py312h52516f5_0
+  - tqdm=4.67.1=pyhd8ed1ab_1
+  - traitlets=5.14.3=pyhd8ed1ab_1
+  - truststore=0.10.1=pyh29332c3_0
+  - types-python-dateutil=2.9.0.20250708=pyhd8ed1ab_0
+  - typing-extensions=4.14.1=h4440ef1_0
+  - typing-inspection=0.4.1=pyhd8ed1ab_0
+  - typing_extensions=4.14.1=pyhe01879c_0
+  - typing_utils=0.1.0=pyhd8ed1ab_1
+  - uri-template=1.3.0=pyhd8ed1ab_1
+  - urllib3=2.5.0=pyhd8ed1ab_0
+  - wcwidth=0.2.13=pyhd8ed1ab_1
+  - webcolors=24.11.1=pyhd8ed1ab_0
+  - webencodings=0.5.1=pyhd8ed1ab_3
+  - websocket-client=1.8.0=pyhd8ed1ab_1
+  - wheel=0.45.1=pyhd8ed1ab_1
+  - yaml=0.2.5=hf897c2e_2
+  - yaml-cpp=0.8.0=h5ad3122_0
+  - zeromq=4.3.5=h5efb499_7
+  - zipp=3.23.0=pyhd8ed1ab_0
+  - zstandard=0.23.0=py312hb2c0f52_2
+  - zstd=1.5.7=hbcf94c1_2
   - pip:
       - aiohappyeyeballs==2.6.1
       - aiohttp==3.12.14
       - aiosignal==1.4.0
       - aiosqlite==0.21.0
-      - annotated-types==0.7.0
-      - anyio==4.9.0
-      - argon2-cffi==25.1.0
-      - argon2-cffi-bindings==21.2.0
-      - arrow==1.3.0
-      - async-lru==2.0.5
-      - attrs==25.3.0
-      - babel==2.17.0
       - banks==2.1.3
-      - beautifulsoup4==4.13.4
-      - bleach==6.2.0
-      - certifi==2025.7.9
-      - cffi==1.17.1
-      - charset-normalizer==3.4.2
       - click==8.2.1
-      - colorama==0.4.6
       - dataclasses-json==0.6.7
-      - defusedxml==0.7.1
       - deprecated==1.2.18
       - dirtyjson==1.0.8
-      - distro==1.9.0
-      - fastjsonschema==2.21.1
-      - filelock==3.18.0
       - filetype==1.2.0
-      - fqdn==1.5.1
       - frozenlist==1.7.0
       - fsspec==2025.5.1
-      - greenlet==3.2.3
       - griffe==1.7.3
-      - h11==0.16.0
-      - hf-xet==1.1.5
-      - httpcore==1.0.9
-      - httpx==0.28.1
-      - huggingface-hub==0.33.4
-      - idna==3.10
-      - isoduration==20.11.0
-      - jinja2==3.1.6
       - jiter==0.10.0
       - joblib==1.5.1
-      - json5==0.12.0
-      - jsonpointer==3.0.0
-      - jsonschema==4.24.0
-      - jsonschema-specifications==2025.4.1
-      - jupyter-events==0.12.0
-      - jupyter-lsp==2.2.5
-      - jupyter-server==2.16.0
-      - jupyter-server-terminals==0.5.3
-      - jupyterlab==4.4.4
-      - jupyterlab-pygments==0.3.0
-      - jupyterlab-server==2.27.3
       - llama-cloud==0.1.32
       - llama-cloud-services==0.6.43
       - llama-index==0.12.48
@@ -119,8 +231,6 @@ dependencies:
       - llama-index-indices-managed-llama-cloud==0.7.10
       - llama-index-instrumentation==0.2.0
       - llama-index-llms-openai==0.4.7
-      - llama-index-llms-openai-like==0.4.0
-      - llama-index-llms-openrouter==0.3.2
       - llama-index-multi-modal-llms-openai==0.5.3
       - llama-index-program-openai==0.3.2
       - llama-index-question-gen-openai==0.3.1
@@ -128,63 +238,24 @@ dependencies:
       - llama-index-readers-llama-parse==0.4.0
       - llama-index-workflows==1.1.0
       - llama-parse==0.6.43
-      - markupsafe==3.0.2
       - marshmallow==3.26.1
-      - mistune==3.1.3
       - multidict==6.6.3
       - mypy-extensions==1.1.0
-      - nbclient==0.10.2
-      - nbconvert==7.16.6
-      - nbformat==5.10.4
       - networkx==3.5
       - nltk==3.9.1
-      - notebook-shim==0.2.4
       - numpy==2.3.1
       - openai==1.95.1
-      - overrides==7.7.0
       - pandas==2.2.3
-      - pandocfilters==1.5.1
       - pillow==11.3.0
-      - prometheus-client==0.22.1
       - propcache==0.3.2
-      - pycparser==2.22
-      - pydantic==2.11.7
-      - pydantic-core==2.33.2
       - pypdf==5.8.0
       - python-dotenv==1.1.1
-      - python-json-logger==3.3.0
-      - pytz==2025.2
-      - pyyaml==6.0.2
-      - referencing==0.36.2
       - regex==2024.11.6
-      - requests==2.32.4
-      - rfc3339-validator==0.1.4
-      - rfc3986-validator==0.1.1
-      - rpds-py==0.26.0
-      - safetensors==0.5.3
-      - send2trash==1.8.3
-      - setuptools==80.9.0
-      - sniffio==1.3.1
-      - soupsieve==2.7
-      - sqlalchemy==2.0.41
       - striprtf==0.0.26
       - tenacity==9.1.2
-      - terminado==0.18.1
       - tiktoken==0.9.0
-      - tinycss2==1.4.0
-      - tokenizers==0.21.2
-      - tqdm==4.67.1
-      - transformers==4.53.2
-      - types-python-dateutil==2.9.0.20250708
-      - typing-extensions==4.14.1
       - typing-inspect==0.9.0
-      - typing-inspection==0.4.1
       - tzdata==2025.2
-      - uri-template==1.3.0
-      - urllib3==2.5.0
-      - webcolors==24.11.1
-      - webencodings==0.5.1
-      - websocket-client==1.8.0
       - wrapt==1.17.2
       - yarl==1.20.1
-prefix: /opt/anaconda3/envs/conda-ai
+prefix: /opt/conda
