--- a/environment.yml
+++ b/environment.yml
@@ -131,7 +131,6 @@ dependencies:
   - oauthlib=3.3.1=pyhd8ed1ab_0
   - openssl=3.5.1=hd08dc88_0
   - overrides=7.7.0=pyhd8ed1ab_1
-  - packaging=25.0=pyh29332c3_1
   - pamela=1.2.0=pyhd8ed1ab_1
   - pandocfilters=1.5.0=pyhd8ed1ab_0
   - parso=0.8.4=pyhd8ed1ab_1
@@ -222,9 +221,19 @@ dependencies:
       - fsspec==2025.5.1
       - griffe==1.7.3
       - hf-xet==1.1.5
+      - httpx-sse==0.4.1
       - huggingface-hub==0.33.4
+      - ipywidgets==8.1.7
       - jiter==0.10.0
       - joblib==1.5.1
+      - jupyter==1.1.1
+      - jupyter-console==6.6.3
+      - jupyterlab-widgets==3.0.15
+      - langchain==0.3.26
+      - langchain-community==0.3.27
+      - langchain-core==0.3.68
+      - langchain-text-splitters==0.3.8
+      - langsmith==0.4.5
       - llama-cloud==0.1.32
       - llama-cloud-services==0.6.43
       - llama-index==0.12.48
@@ -251,12 +260,16 @@ dependencies:
       - nltk==3.9.1
       - numpy==2.3.1
       - openai==1.95.1
+      - orjson==3.10.18
+      - packaging==24.2
       - pandas==2.2.3
       - pillow==11.3.0
       - propcache==0.3.2
+      - pydantic-settings==2.10.1
       - pypdf==5.8.0
       - python-dotenv==1.1.1
       - regex==2024.11.6
+      - requests-toolbelt==1.0.0
       - safetensors==0.5.3
       - striprtf==0.0.26
       - tenacity==9.1.2
@@ -265,6 +278,7 @@ dependencies:
       - transformers==4.53.2
       - typing-inspect==0.9.0
       - tzdata==2025.2
+      - widgetsnbextension==4.0.14
       - wrapt==1.17.2
       - yarl==1.20.1
 prefix: /opt/conda/envs/conda-ai
